CORRECTION : visibilité

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,3 +67,7 @@ h2 {
     white-space: nowrap;
     border: 0;
   }
+
+  .text-ombre {
+    text-shadow: 0 0 10px rgba(0,0,0,0.9);
+  }
